<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:background="@color/white"
    tools:context="com.example.bootcampsns.activity.LoginActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/white">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="left|center_vertical"
            android:textSize="@dimen/font_size"
            android:text="@string/friend_add_label"
            android:textColor="@color/black"
            android:layout_margin="5dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />

        <EditText
            android:id="@+id/friend_add"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:hint="@string/friend_add_hint"
            android:background="@drawable/round_corner_gray_5dp"
            android:maxLines="1"
            android:maxLength="140"/>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:gravity="right|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <Button
                android:id="@+id/friend_button"
                style="?android:textAppearanceSmall"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:text="@string/friend_add_button"
                android:textStyle="bold"
                android:background="@drawable/round_corner_button_10dp"
                />

            <Button
                android:id="@+id/friend_button_cancel"
                style="?android:textAppearanceSmall"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:text="@string/action_cancel"
                android:textStyle="bold"
                android:background="@drawable/round_corner_button_10dp"
                />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height= "1dp"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="1dp"
        android:background="@color/light_gray" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="left|center_vertical"
        android:textSize="@dimen/font_size"
        android:text="@string/friend_current_label"
        android:textColor="@color/black"
        android:layout_margin="5dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:layout_weight="90"
        >

        <ListView
            android:id="@+id/friend_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stackFromBottom="false"
            android:layout_gravity="top|center_horizontal"/>
    </ScrollView>


</LinearLayout>